--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta property="og:title" content="Letmeask" />
+    <meta property="og:url" content="https://letmeask.ianlibanio.com" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/ianlibanio/Letmeask/6e91b71e3ce400a3b069f1153537bacfa898d6fc/.github/banner.svg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Crie salas de Q&amp;A ao-vivo e tire as dúvidas da sua audiência em tempo-real." />
+    <meta property="og:locale" content="pt_BR" />
+
     <link rel="icon" href="logo.svg" sizes="any" type="image/svg+xml">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
