fix meta property og:image

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <meta property="og:title" content="Letmeask" />
     <meta property="og:url" content="https://letmeask.ianlibanio.com" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/ianlibanio/Letmeask/6e91b71e3ce400a3b069f1153537bacfa898d6fc/.github/banner.svg" />
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/letmeask-1d111.appspot.com/o/banner.png?alt=media&token=cf4e381f-0ac3-435c-adf0-01d80984ca51" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Crie salas de Q&amp;A ao-vivo e tire as dúvidas da sua audiência em tempo-real." />
     <meta property="og:locale" content="pt_BR" />
